@@ -602,6 +602,7 @@ All (GUI):
 - Add "rect" paramerer to wxRichToolTip::ShowFor() (John Roberts).
 - Add wxListCtrl::EnableAlternateRowColours() (troelsk).
 - Fix wrong tab order in wxAuiNotebook after dragging (Mark Barber).
+- Fix bug in generic wxDataViewCtrl column dragging (jobuz).
 
 wxGTK:
 
